progress & more Loggermessages
